# FIFT_WORK

./: README.md  pyproject.toml
src/: chernovic.py  dbmanager.py  helping.py  main.py  run.py
